--- a/Desktop/temaPAOO2/CMakeLists.txt
+++ b/Desktop/temaPAOO2/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 project(temaPAOO2)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 
 add_executable(temaPAOO2 src/main.cpp src/Shelf.cpp)
 
